# GameEngine

./: .gitignore  .gitmodules  CMakeLists.txt  meson.build
include/GameEngine/: Colors.hpp  Engine.hpp  MatrixStack.hpp  Timer.hpp
src/: Color.hpp  Engine.cpp  Engine.hpp  Error.cpp  MatrixStack.cpp  MatrixStack.hpp  Timer.cpp  game-engine.cpp  meson.build
src/Engine/: Error.cpp  Error.hpp
subprojects/: SDL.wrap
